# rsync-rs

./: .gitignore  AUDIT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: batch.rs  daemon.rs  log.rs  main.rs  options.rs  options_server.rs  progress.rs  uidlist.rs  util.rs
src/checksum/: md4.rs  mod.rs  rolling.rs  strong.rs
src/delta/: deflate_token.rs  match_blocks.rs  mod.rs  token.rs
src/fileops/: fileio.rs  mod.rs  syscall.rs
src/filter/: mod.rs
src/flist/: mod.rs  recv.rs  send.rs  sort.rs
src/io/: mod.rs  multiplex.rs  varint.rs
src/pipeline/: generator.rs  local.rs  mod.rs  receiver.rs  sender.rs
src/protocol/: constants.rs  errcode.rs  mod.rs  types.rs
src/transport/: daemon.rs  local.rs  mod.rs  ssh.rs
tests/: Makefile  compat_test.sh  run_compat_tests.sh  run_regression.ps1  run_regression.sh  win_interop.py  win_smoke.py
tests/regress/: __main__.py  cli_checks.py  harness.py  scenarios.py
