[package]
name = "rsync-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of rsync, wire-compatible with the C version"
license = "GPL-3.0"

[[bin]]
name = "rsync-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
digest = "0.10"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
byteorder = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "user", "process", "signal", "socket", "net", "time"] }
libc = "0.2"
xattr = "1"

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
