[package]
name = "rsync-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of rsync, wire-compatible with the C version"
license = "GPL-3.0"

[[bin]]
name = "rsync-rs"
path = "src/main.rs"

[features]
# Enable structured debug tracing via the `tracing` crate.
# Build with: cargo build --features debug-trace
# At runtime, set RUST_LOG=rsync_rs=debug (or RSYNC_RS_DEBUG=1 still works).
debug-trace = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4", features = ["derive"] }
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
digest = "0.10"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
byteorder = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "user", "process", "signal", "socket", "net", "time"] }
libc = "0.2"
xattr = "1"

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
